refactor(docker): refactor Dockerfile with new debian image for webp image support